# cChardet

./: .gitignore  .gitmodules  .travis.yml  CHANGES.md  CHANGES.rst  MANIFEST.in  Makefile  Pipfile  README.markdown  README.md  README.rst  TODO.md  appveyor.yml  cchardet.pyx  cibuildwheel.sh  pandoc_markdown2rst.bat  pyproject.toml  readme.md  readme.rst  requirements-dev.txt  setup.cfg  setup.py  setup2.py  tests.py  tox.ini  win_build.bat  win_upload.bat
.github/: ISSUE_TEMPLATE.md  stale.yml
.github/workflows/: build-and-upload-to-pypi.yml  build-darwin.yml  build-linux.yml  build-windows.yml  build.yaml  build.yml  linux.yaml  macos.yaml  pip-install-cchardet-fails-on-python3.11.yml  test-darwin.yml  test-linux.yml  test-windows.yml  test.yml  windows.yaml
appveyor/: install.ps1  run_with_env.cmd
dockerfiles/: buildwheel.sh
dockerfiles/develop/: Dockerfile
dockerfiles/slim/: Dockerfile
ext/libcharsetdetect/: .gitignore  README.md  configure-iphone-simulator  update-mozilla
ext/libcharsetdetect/nspr-emu/: prcpucfg.h
src/cchardet/: __init__.py  __main__.py  _cchardet.pyx  cchardet.pyx  cchardet2.pyx  nscore.pxd  prtypes.pxd  python.pxd  string.pxd  version.py
src/cchardet/cli/: cchardetect.py
src/ext/: libcharsetdetect.txt
src/ext/libcharsetdetect/: .gitignore  CMakeLists.txt  Makefile.test  charsetdetect.cpp  charsetdetect.h  charsetdetectPriv.h  configure  configure-iphone  main.cpp  memory_leak.h  nscore.h  trchardet.c
src/ext/libcharsetdetect/mozilla/extensions/universalchardet/src/base/: JpCntx.cpp  LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangCzechModel.cpp  LangFinnishModel.cpp  LangGermanModel.cpp  LangGreekModel.cpp  LangHebrewModel.cpp  LangHungarianModel.cpp  LangPolishModel.cpp  LangSpanishModel.cpp  LangSwedishModel.cpp  nsEUCTWProber.h  nsGB2312Prober.h  nsMBCSSM.cpp  nsSBCSGroupProber.cpp  nsSBCharSetProber.h  nsUniversalDetector.cpp  nsUniversalDetector.h
src/ext/libcharsetdetect/nspr-emu/: prcpucfg.h  prcpucfg_linux.h  prcpucfg_win.h  prtypes.h
src/tests/: bench.py  cchardet_test.py  test.py  test_1.py
src/tests/testdata/: wikipediaJa_Japan_SJIS.txt  wikipediaTw_Japan_GB2312.txt
src/tests/testdata/bg/ISO-8859-5/: wikitop_bg_ISO-8859-5.txt
src/tests/testdata/cz/ISO-8859-2/: wikitop_cz_ISO-8859-2.txt
src/tests/testdata/dk/UTF-8/: wikitop_dk_UTF-8.txt
src/tests/testdata/el/.WINDOWS-1253/: wikitop_el_WINDOWS-1253.txt
src/tests/testdata/el/UTF-8/: wikitop_el_UTF-8.txt
src/tests/testdata/en/WINDOWS-1252/: wikitop_en_WINDOWS-1252.txt
test/: bench.py  debug.bat  test_cchardet.py  tests.py
test/testdata/: wikipediaJa_Japan_SJIS.txt  wikipediaJa_One_Thousand_and_One_Nights_SJIS.txt  wikipediaTw_One_Thousand_and_One_Nights_GB2312.txt
test/testdata/bg/ISO-8859-5/: wikitop_bg_ISO-8859-5.txt
test/testdata/bg/WINDOWS-1251/: wikitop_bg_WINDOWS-1251.txt
test/testdata/cz/ISO-8859-2/: wikitop_cz_ISO-8859-2.txt
test/testdata/cz/UTF-8/: wikitop_cz_UTF-8.txt
test/testdata/de/UTF-8/: wikitop_de_UTF-8.txt
test/testdata/de/WINDOWS-1252/: wikitop_de_WINDOWS-1252.txt
test/testdata/dk/WINDOWS-1252/: wikitop_dk_WINDOWS-1252.txt
test/testdata/el/.WINDOWS-1253/: README  wikitop_el_WINDOWS-1253.txt
test/testdata/el/ISO-8859-7/: wikitop_el_ISO-8859-7.txt
test/testdata/en/WINDOWS-1252/: wikitop_en_WINDOWS-1252.txt
test/testdata/es/UTF-8/: wikitop_es_UTF-8.txt
test/testdata/es/WINDOWS-1252/: wikitop_es_WINDOWS-1252.txt
test/testdata/fi/UTF-8/: wikitop_fi_UTF-8.txt
test/testdata/fi/WINDOWS-1252/: wikitop_fi_WINDOWS-1252.txt
test/testdata/fr/WINDOWS-1252/: wikitop_fr_WINDOWS-1252.txt
test/testdata/he/WINDOWS-1255/: wikitop_he_WINDOWS-1255.txt
test/testdata/hu/.WINDOWS-1250/: wikitop_hu_WINDOWS-1250.txt
test/testdata/hu/ISO-8859-2/: wikitop_hu_ISO-8859-2.txt
test/testdata/hu/UTF-8/: wikitop_hu_UTF-8.txt
test/testdata/it/UTF-8/: wikitop_it_UTF-8.txt
test/testdata/it/WINDOWS-1252/: wikitop_it_WINDOWS-1252.txt
test/testdata/nl/WINDOWS-1252/: wikitop_nl_WINDOWS-1252.txt
test/testdata/no/UTF-8/: wikitop_no_UTF-8.txt
test/testdata/no/WINDOWS-1252/: wikitop_no_WINDOWS-1252.txt
test/testdata/pl/ISO-8859-2/: wikitop_pl_ISO-8859-2.txt
test/testdata/pt/WINDOWS-1252/: wikitop_pt_WINDOWS-1252.txt
test/testdata/ru/IBM855/: wikitop_ru_IBM855.txt
test/testdata/ru/KOI8-R/: wikitop_ru_KOI8-R.txt
test/testdata/ru/UTF-8/: wikitop_ru_UTF-8.txt
test/testdata/ru/WINDOWS-1251/: wikitop_ru_WINDOWS-1251.txt
test/testdata/se/WINDOWS-1252/: wikitop_se_WINDOWS-1252.txt
test/testdata/th/TIS-620/: utffool_th_TIS-620.txt  wikitop_th_TIS-620.txt
test/testdata/th/UTF-8/: wikitop_th_UTF-8.txt
test/testdata/tr/ISO-8859-9/: wikitop_tr_ISO-8859-9.txt
test/testdata/tr/UTF-8/: wikitop_tr_UTF-8.txt
test/testdata/zh/GB18030/: wikitop_zh_GB18030.txt
testdata/: wikipediaJa_One_Thousand_and_One_Nights.txt  wikipediaJa_One_Thousand_and_One_Nights_SJIS.txt  wikipediaTw_Japan_GB2312.txt
testdata/bg/UTF-8/: wikitop_bg_UTF-8.txt
testdata/el/ISO-8859-7/: wikitop_el_ISO-8859-7.txt
testdata/en/UTF-8/: wikitop_en_UTF-8.txt
testdata/he/UTF-8/: wikitop_he_UTF-8.txt
testdata/he/WINDOWS-1255/: wikitop_he_WINDOWS-1255.txt
testdata/it/WINDOWS-1252/: wikitop_it_WINDOWS-1252.txt
testdata/nl/UTF-8/: wikitop_nl_UTF-8.txt
testdata/pt/WINDOWS-1252/: wikitop_pt_WINDOWS-1252.txt
testdata/ru/WINDOWS-1251/: wikitop_ru_WINDOWS-1251.txt
testdata/se/UTF-8/: wikitop_se_UTF-8.txt
testdata/se/WINDOWS-1252/: wikitop_se_WINDOWS-1252.txt
tests/: bench.py  test_1.py
tests/samples/: github_issue_26_expected_windows_1252_got_ maccentraleurope.txt
tools/: download_github_release_assets.sh
(+24 files in other folders)
