[project]
name = "cchardet"
authors = [{ name = "PyYoshi", email = "myoshi321go@gmail.com" }]
urls.Homepage = 'https://github.com/PyYoshi/cChardet'
description = 'cChardet is high speed universal character encoding detector.'
license = { text = 'Mozilla Public License' }
classifiers = [
    'License :: OSI Approved :: Mozilla Public License 1.1 (MPL 1.1)',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = ">= 3.9"
dynamic = ["version"]

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "cchardet.__version__" }

[tool.pytest.ini_options]
pythonpath = "src"

[tool.rye]
dev-dependencies = [
    "chardet>=5.2.0",
    "cython>=3.0.10",
    "setuptools>=70.0.0",
    "pytest>=8.2.1",
    "ruff>=0.4.6",
]

[tool.ruff]
exclude = ["src/ext"]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "N"]
format.quote-style = "double"
format.indent-style = "space"
