[project]
name = "cchardet"
authors = [{ name = "PyYoshi", email = "myoshi321go@gmail.com" }]
urls.Homepage = 'https://github.com/PyYoshi/cChardet'
description = 'cChardet is high speed universal character encoding detector.'
readme = { file = 'README.md', content-type = 'text/markdown' }
license = { file = "COPYING" }
classifiers = [
    'License :: OSI Approved :: Mozilla Public License 1.1 (MPL 1.1)',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = ">= 3.9"
dynamic = ["version"]

[build-system]
requires = ["setuptools", "Cython", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
cchardetect = "cchardet.cli.cchardetect:main"

[tool.setuptools.dynamic]
version = { attr = "cchardet.__version__" }

[tool.rye]
dev-dependencies = [
    "chardet>=5.2.0",
    "cython>=3.0.11",
    "setuptools>=75.6.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.ruff]
exclude = ["src/ext"]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "N"]
format.quote-style = "double"
format.indent-style = "space"

[tool.cibuildwheel]
skip = "pp* cp36-* cp37-* cp38-*"
archs = "auto"
before-build = [
    "pip install cython==3.0.10",
    "cython {project}/src/cchardet/_cchardet.pyx",
]

# NOTICE: ローカルでは想定通りにテストは通るが､ cibuildwheel では 特定のファイルの文字コード検知がうまくいかないので一時的に無効化する
# test-requires = "pytest"
# test-command = "pytest -vs {project}/tests"
